.automation/test/salesforce/bad/force-app/main/default/objects/BackEndCalloutBuffer__c/BackEndCalloutBuffer__c.object-meta.xml
<CustomObject>
    <description>In case the same callout is often call but the result is always the same, increase performances by storing temporarily the call result.
Use UtilsBackEnd.getCalloutBuffer(UniqueKey) and UtilsBackEnd.setCalloutBuffer(UniqueKey)</description>
    <label>Back End Callout Buffer</label>
    <nameField>
        <label>BackEndCalloutBuffer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Back End Callout Buffers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>