.automation/test/salesforce/bad/force-app/main/default/objects/BackEndCalloutBuffer__c/fields/BufferString2__c.field-meta.xml
<CustomField>
    <fullName>BufferString2__c</fullName>
    <label>BufferString2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>