.automation/test/salesforce/bad/force-app/main/default/objects/BackEndCalloutBuffer__c/fields/BufferString4__c.field-meta.xml
<CustomField>
    <fullName>BufferString4__c</fullName>
    <description>BufferString4</description>
    <inlineHelpText>BufferString4</inlineHelpText>
    <label>BufferString4</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>