.automation/test/salesforce/bad/force-app/main/default/objects/BackEndCalloutBuffer__c/fields/BufferString6__c.field-meta.xml
<CustomField>
    <fullName>BufferString6__c</fullName>
    <description>BufferString6</description>
    <inlineHelpText>BufferString6</inlineHelpText>
    <label>BufferString6</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>