.automation/test/salesforce/bad/force-app/main/default/objects/BackEndCalloutBuffer__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Key to identify the callout parameters ( like product name for example )</description>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>