.automation/test/salesforce/bad/force-app/main/default/objects/BackEndCalloutBuffer__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <length>20</length>
    <type>Text</type>
</CustomField>